--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://<seu-usuario>.github.io/site-equilibra"
+  "homepage": "https://lauraferreira04.github.io/site-equilibra"
 }
